[project]
name = "daemonvalidate"
version = "0.1.0"
description = "A streaming, zero-state data validation gatekeeper powered by Pydantic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
